grosses modif, ajout de données

--- a/projet_session/projet_Rmd.html
+++ b/projet_session/projet_Rmd.html
@@ -361,6 +361,86 @@ aux élections fédérales de 2004 à 2011</h1>
 
 <div id="état-du-savoir" class="section level1">
 <h1>État du savoir</h1>
+<p>Être autochtone est une expérience qui regroupe les membres des
+différentes nations et communautés des Premières Nations du Canada et
+d’ailleurs. L’édification de l’État colonial canadien s’est fait au
+dépends des premiers peuples. Marginalisés, confinés à des réserves
+dépourvus de la plupart des droits politiques des autres citoyens du
+Canada, ce n’est qu’en 1960 que le gouvernement fédéral de John
+Diefenbaker leur octroi le vote. Certaines législatures provinciales
+l’avaient déjà fait ou l’on fait par la suite, le Québec étant la
+dernière province à leur donner le droit de vote en 1969, sans débats ni
+revendications.</p>
+<p>La province du Québec peut représenter sur les plans sociaux et
+historiques une expériences fortement différentes pour les membres des
+Premiers peuples par rapport à leurs semblables dans les autres
+provinces. La langue et le nationalisme étant deux traits distinctifs de
+la société québécoises pouvant avoir des conséquences qui se distingue
+des conséquences des contextes dans les autres provinces. Il en reste
+qu’un aspect politico-administratif s’impose l’expérience des
+communautés autochtones dans leur pratique du droit de vote d’une mer à
+l’autre: la taille des circonscriptions.</p>
+<p>Quels facteurs ont été mobilisés par les chercheurs pour expliquer la
+participation électorale des membres des Premières nations aux élections
+fédérales ? Plusieurs rapports postélectoraux ont mobilisé une approche
+centrée sur les ressources socio-économiques. Celles-ci sont univoques:
+les différences de statut socio-économique entre les membres des
+Premières nations et les Allochtones expliqueraient la moitié de l’écart
+de participation entre ces deux groupes <span class="citation">[@harell2010]</span>. L’autre moitié de l’explication
+résiderait donc dans une expérience qui est proprement autochtone.</p>
+<p>Parmis les facteurs institutionnels, plusieurs auteurs se sont penché
+sur la question de la taille des circonscriptions électorales ainsi que
+du rôle de l’information politique fournies par les institutions
+électorales. La taille de l’électorat est un facteur multidimensionnel.
+Il peut d’abord être abordé sous l’angle du choix rationel, où les
+électeurs autochtones, évaluant la taille de leur communauté,
+choisissent ou non de voter s’ils croivent que les membres de leur
+communauté peuvent influencer le choix du représentant en leur faveur
+<span class="citation">[@hill2010]</span>.</p>
+<p>Une autre dimension de la taille des circonscriptions, cette fois-ci
+faisant référence à son étendue géographique, est l’éloignement des
+communautés. Les électeurs éloignées de centres urbains ont une plus
+grande propension à être marginalisé par les partis politiques et la
+couverture médiatique lors de campagnes électorales étant donné des
+coûts de déplacement <span class="citation">[@hill2010]</span>. Les
+communautés autochtones au Québec, étant généralement loin des centres
+urbains, pourraient faire fasse à ce genre d’enjeux d’éloignement,
+tandis que dans d’autres provinces, nombre de communautés sont plus près
+des centres urbains.</p>
+<p>Une dernière dimension de la taille de la circonscription est sa
+composition démographique. Les circonscriptions électorales plus grandes
+en termes d’électeurs sont également plus diversifiées sur les aspects
+ethno-culturels. La diversité linguistiques surtout serait un facteur
+qui déprécient la participation électorale <span class="citation">[@armstrong2024]</span>. Ici, vu la plus faible
+proportion d’électeurs autochtones dans les circonscriptions
+électorales, il serait probable que l’homogénéité de la circonscription
+soit un facteur discriminant les Premières nations. Si le facteur
+linguistique semble important, Harell et al. 2010 observent une
+corrélation entre la langue et la participation qui va à l’encontre des
+attentes: des communautés qui parlent le Cri participent davantage aux
+élections fédérales que celles parlant l’anglais courrament <span class="citation">[@harell2010]</span>. Les Premières nations du Québec
+sont celles dont les langues traditionnelles sont les plus vivantes du
+pays et il en est de même pour les Nunavimmiut et l’usage de l’Inuktitut
+au sein de l’Inuit Nunangat. Cependant, cette relation peut être le
+produit de l’histoire et des contextes coloniaux propres aux différentes
+communautés <span class="citation">[@harell2010]</span>. Comme la langue
+seconde de nombre de communautés autochtones au Québec est l’anglais, la
+vie dans un espace francophone pourrait intervenir comme facteur qui
+déprécie la participation électorale dans la province, ce qui ne serait
+pas le cas dans les autres provinces.</p>
+<div id="hypothèses" class="section level2">
+<h2>Hypothèses</h2>
+<p>À partir de ce très bref État du savoir, nous en venons à découler X
+hypothèses. D’abord, nous nous attendons que la proportion plus faible
+d’électeurs autochtones dans la province du Québec ait plusieurs effets
+qui décourage la participation électorale.</p>
+<p><em>H1: l’absence de masse critique des électeurs autochtones dans
+les circonscriptions fédérales au Québec influence négativement la
+participation aux élections</em> <em>H2: la distance entre les
+communautés autochtones et les centres urbains découragent la
+mobilisation partisane et la saillance des élections auprès des
+électeurs autochtones</em></p>
+</div>
 <div id="sélection-des-sources-bibliographiques" class="section level2">
 <h2>Sélection des sources bibliographiques</h2>
 <p>Pour produire cet état du savoir, nous avons eu recours à trois
@@ -455,6 +535,24 @@ legend.position = “right”) + scale_color_manual(values = “red”)</p>
 </div>
 <div id="discussion" class="section level1">
 <h1>Discussion</h1>
+</div>
+<div id="bibliographie" class="section level1">
+<h1>Bibliographie</h1>
+<p>article{harell2010explaining, title={Explaining Aboriginal turnout in
+federal elections: Evidence from Alberta, Saskatchewan, and Manitoba},
+author={Harell, Allison and Panagos, Dimitrios and Matthews, J Scott},
+year={2010} }</p>
+<p><span class="citation">@article</span>{hill2010voting, title={Voting
+attitudes and behaviour among Aboriginal peoples: Reports from Anangu
+women}, author={Hill, Lisa and Alport, Kate}, journal={Australian
+Journal of Politics &amp; History}, volume={56}, number={2},
+pages={242–258}, year={2010}, publisher={Wiley Online Library} }</p>
+<p><span class="citation">@article</span>{armstrong2023exploring,
+title={Exploring the effects of electorate size on indigenous voter
+turnout}, author={Armstrong, David A and Alcantara, Christopher and
+Kennedy, John}, journal={Politics, Groups, and Identities}, volume={11},
+number={1}, pages={98–107}, year={2023}, publisher={Taylor &amp;
+Francis} }</p>
 </div>
 
 
