rédiger question et hypothèses

--- a/projet_session/projet_Rmd.html
+++ b/projet_session/projet_Rmd.html
@@ -436,10 +436,12 @@ d’électeurs autochtones dans la province du Québec ait plusieurs effets
 qui décourage la participation électorale.</p>
 <p><em>H1: l’absence de masse critique des électeurs autochtones dans
 les circonscriptions fédérales au Québec influence négativement la
-participation aux élections</em> <em>H2: la distance entre les
-communautés autochtones et les centres urbains découragent la
-mobilisation partisane et la saillance des élections auprès des
-électeurs autochtones</em></p>
+participation aux élections</em></p>
+<p><em>H2: la distance entre les communautés autochtones et les centres
+urbains découragent la mobilisation partisane et la saillance des
+élections auprès des électeurs autochtones, ce qui a pour conséquence
+d’influencer négativement la participation des communautés aux élections
+fédérales</em></p>
 </div>
 <div id="sélection-des-sources-bibliographiques" class="section level2">
 <h2>Sélection des sources bibliographiques</h2>
