redaction de la discussion

--- a/projet_session/projet_Rmd.html
+++ b/projet_session/projet_Rmd.html
@@ -420,18 +420,22 @@ seconde de nombre de communautés autochtones au Québec est l’anglais, la
 vie dans un espace francophone pourrait intervenir comme facteur qui
 déprécie la participation électorale dans la province, ce qui ne serait
 pas le cas dans les autres provinces.</p>
+<p>La question de recherche que nous nous posons alors est la suivante:
+<em>quelle est l’influence de la taille de la circonscription sur la
+participation aux élections fédérales de 2021 dans les communautés
+autochtones ?</em></p>
 <div id="hypothèses" class="section level2">
 <h2>Hypothèses</h2>
-<p>À partir de ce très bref État du savoir, nous en venons à découler 2
-hypothèses. D’abord, nous nous attendons que la proportion plus faible
-d’électeurs autochtones dans la province du Québec ait plusieurs effets
-qui décourage la participation électorale.</p>
-<p><em>H1: l’absence de masse critique des électeurs autochtones dans
-les circonscriptions fédérales au Québec influence négativement la
-participation aux élections</em></p>
-<p><em>H2: les caractéristiques linguistiques propres au Québec ont une
-influence négative et plus forte sur la participation électorale des
-communautés autochtones du Québec que dans le reste du Canada</em></p>
+<p>À partir de ce très bref État du savoir, nous en venons à découler
+une hypothèse. D’abord, nous nous attendons que la proportion plus
+faible d’électeurs autochtones dans la province du Québec ait plusieurs
+effets qui décourage la participation électorale.</p>
+<p><em>H1: la proportion d’électeurs autochtones dans une
+circonscription électorale est positivement associée à la participation
+électorale des électeurs autochtones</em></p>
+<p><em>H2: la corrélation entre la proportion d’électeurs autochtones et
+le taux de participation de ces électeurs est plus faible au Québec que
+dans le reste du Canada</em></p>
 </div>
 <div id="sélection-des-sources-bibliographiques" class="section level2">
 <h2>Sélection des sources bibliographiques</h2>
@@ -582,10 +586,30 @@ facet_wrap(~PROV) + theme_minimal() + theme( plot.title =
 element_text(hjust = 0.5), # Centrage du titre text = element_text(size
 = 12), legend.position = “none” # Supprime la légende pour chaque
 facette )</p>
+<p>Ces codes ont été utilisés pour trouver et illustrer le coefficient
+de corrélation entre la proportion d’électeurs autochtones dans les
+circonscriptions fédérales et le taux de participation de ces électeurs
+en 2021. Nous avons fait un coefficient pour l’ensemble des
+circonscriptions, puis elles ont été regroupées selon la province, puis
+divisé entre le Québec et les reste du Canada.</p>
 </div>
 </div>
 <div id="discussion" class="section level1">
 <h1>Discussion</h1>
+<p>D’après les données que nous avons utilisées, nos hypothèses sont
+infirmées. Le coefficient de corrélation, bien que faible, montre que la
+relation entre la taille de la circonscription est au mieux associée à
+un faible effet négatif sur la participation électorale, sinon une
+corrélation nulle. Cette conclusion vient à l’encontre de la théorie du
+choix rationnel que nous testions avec l’hypothèse 1.</p>
+<p>Quant à l’hypothèse 2, elle est également infirmée par nos résultats.
+Nous nous attendions à observer une relation positive entre nos deux
+variables dans toutes les provinces, mais plus faibles au Québec. Or, au
+Québec, elle est négative comme dans plusieurs autres provinces, mais
+elle est plus faible que plusieurs autres provinces. Ainsi, la relation
+entre le taux de participation et la proportion d’électeurs autochtones
+est plus faible que dans plusieurs autres provinces, ce à quoi nous ne
+nous attendions pas.</p>
 </div>
 <div id="bibliographie" class="section level1">
 <h1>Bibliographie</h1>
