rédiger la conclusion

--- a/projet_session/projet_Rmd.html
+++ b/projet_session/projet_Rmd.html
@@ -610,6 +610,15 @@ elle est plus faible que plusieurs autres provinces. Ainsi, la relation
 entre le taux de participation et la proportion d’électeurs autochtones
 est plus faible que dans plusieurs autres provinces, ce à quoi nous ne
 nous attendions pas.</p>
+<p>En somme, une différence entre le taux de participation ne peut être
+attribué à la taille, et son corrolaire la proportion d’électeurs
+autochtones, pour expliquer le taux de participation des électeurs
+autochtones du Québec et du reste du Canada.</p>
+<p>Pour aller plus loin, une analyse qui souhaiterait mobiliser la
+taille des circonscriptions devrait inclure les variables
+sociodémographiques puisqu’une proportion plus élevée d’électeurs
+autochtones dans une circonscription sont souvent en région éloignée où
+les caractéristiques socioéconomiques sont différentes.</p>
 </div>
 <div id="bibliographie" class="section level1">
 <h1>Bibliographie</h1>
