--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <li><a href="#one" class="active">D'où je viens</a></li>
           <li><a href="#two">Mes réalisations</a></li>
           <li><a href="#three">Mon CV</a></li>
+          <li><a href="#projets">Mes Projets</a></li>
           <li><a href="#four">Contact</a></li>
         </ul>
       </nav>
