rédiger section mon projet

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div class="container">
     <h3>Mes Projets</h3>
     <p>
-      Voici une sélection de mes projets. Cliquez sur l'image pour découvrir le projet complet.
+      Voici un court projet de recherche que j'ai récemment réalisé. Cliquez sur l'image pour découvrir le projet complet.
     </p>
     <div class="features">
       <article>
@@ -153,9 +153,10 @@
           <img src="projet_session/projet.png" alt="Aperçu du projet de session" />
         </a>
         <div class="inner">
-          <h4>Cours d'outils numériques (POL-6078)</h4>
+          <h4>Taille de la circonscription et participation électorale</h4>
           <p>
-            Cliquez sur l'image ou sur le lien ci-dessous pour explorer le contenu de ce projet.
+            Quelle relation entre la proportion d'électeurs autochtones et la participation électorale ?
+            Intuitivement, quand le poids de ce groupe d'électeurs augmente, leur participation devrait en faire de même, mais est-ce réellement le cas ?
           </p>
           <!-- Lien direct vers le projet -->
           <p>
