changer références bibliographique et ajout projet dans page internet

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="features">
       <article>
         <!-- Aperçu du projet en image -->
-        <a href="projet_session/projet.html" class="image" target="_blank">
+        <a href="C:\Users\willi\OneDrive\Documents\WilliamBeaudry.github.io\projet_session\projet_Rmd.html" class="image" target="_blank">
           <img src="projet_session/projet.png" alt="Aperçu du projet de session" />
         </a>
         <div class="inner">
