--- a/projet_session/projet_Rmd.html
+++ b/projet_session/projet_Rmd.html
@@ -377,9 +377,9 @@ fédérales ? Plusieurs rapports postélectoraux ont mobilisé une approche
 centrée sur les ressources socio-économiques. Celles-ci sont univoques:
 les différences de statut socio-économique entre les membres des
 Premières nations et les Allochtones expliqueraient la moitié de l’écart
-de participation entre ces deux groupes <span class="citation">[@harell2010]</span>. L’autre moitié de l’explication
-résiderait donc dans une expérience qui est proprement autochtone, donc
-des facteurs structurels.</p>
+de participation entre ces deux groupes (Harell et al., 2010). L’autre
+moitié de l’explication résiderait donc dans une expérience qui est
+proprement autochtone, donc des facteurs structurels.</p>
 <p>Parmi les facteurs institutionnels, plusieurs auteurs se sont penché
 sur la question de la taille des circonscriptions électorales ainsi que
 du rôle de l’information politique fournies par les institutions
@@ -388,38 +388,38 @@ Il peut d’abord être abordé sous l’angle du choix rationel, où les
 électeurs autochtones, évaluant la taille de leur communauté,
 choisissent ou non de voter s’ils croient que les membres de leur
 communauté peuvent influencer le choix du représentant en leur faveur
-<span class="citation">[@hill2010]</span>.</p>
+(Hill et Alport, 2010).</p>
 <p>Une autre dimension de la taille des circonscriptions, cette fois-ci
 faisant référence à son étendue géographique, est l’éloignement des
 communautés. Les électeurs éloignées de centres urbains ont une plus
 grande propension à être marginalisé par les partis politiques et la
 couverture médiatique lors de campagnes électorales étant donné des
-coûts de déplacement <span class="citation">[@hill2010]</span>. Les
-communautés autochtones au Québec, étant généralement loin des centres
-urbains, pourraient faire fasse à ce genre d’enjeux d’éloignement,
-tandis que dans d’autres provinces, nombre de communautés sont plus près
-des centres urbains.</p>
+coûts de déplacement (Hill et Alport, 2010). Les communautés autochtones
+au Québec, étant généralement loin des centres urbains, pourraient faire
+fasse à ce genre d’enjeux d’éloignement, tandis que dans d’autres
+provinces, nombre de communautés sont plus près des centres urbains.</p>
 <p>Une dernière dimension de la taille de la circonscription est sa
 composition démographique. Les circonscriptions électorales plus grandes
 en termes d’électeurs sont également plus diversifiées sur les aspects
 ethno-culturels. La diversité linguistiques surtout serait un facteur
-qui déprécient la participation électorale <span class="citation">[@armstrong2024]</span>. Ici, vu la plus faible
-proportion d’électeurs autochtones dans les circonscriptions
-électorales, il serait probable que l’homogénéité de la circonscription
-soit un facteur discriminant les Premières nations. Si le facteur
-linguistique semble important, Harell et al. 2010 observent une
-corrélation entre la langue et la participation qui va à l’encontre des
-attentes: des communautés qui parlent le Cri participent davantage aux
-élections fédérales que celles parlant l’anglais courrament <span class="citation">[@harell2010]</span>. Les Premières nations du Québec
-sont celles dont les langues traditionnelles sont les plus vivantes du
-pays et il en est de même pour les Nunavimmiut et l’usage de l’Inuktitut
-au sein de l’Inuit Nunangat. Cependant, cette relation peut être le
-produit de l’histoire et des contextes coloniaux propres aux différentes
-communautés <span class="citation">[@harell2010]</span>. Comme la langue
-seconde de nombre de communautés autochtones au Québec est l’anglais, la
-vie dans un espace francophone pourrait intervenir comme facteur qui
-déprécie la participation électorale dans la province, ce qui ne serait
-pas le cas dans les autres provinces.</p>
+qui déprécient la participation électorale (Armstrong et al., 2024).
+Ici, vu la plus faible proportion d’électeurs autochtones dans les
+circonscriptions électorales, il serait probable que l’homogénéité de la
+circonscription soit un facteur discriminant les Premières nations. Si
+le facteur linguistique semble important, Harell et al. 2010 observent
+une corrélation entre la langue et la participation qui va à l’encontre
+des attentes: des communautés qui parlent le Cri participent davantage
+aux élections fédérales que celles parlant l’anglais courrament (Harell
+et al., 2010). Les Premières nations du Québec sont celles dont les
+langues traditionnelles sont les plus vivantes du pays et il en est de
+même pour les Nunavimmiut et l’usage de l’Inuktitut au sein de l’Inuit
+Nunangat. Cependant, cette relation peut être le produit de l’histoire
+et des contextes coloniaux propres aux différentes communautés (Harell
+et al. 2010). Comme la langue seconde de nombre de communautés
+autochtones au Québec est l’anglais, la vie dans un espace francophone
+pourrait intervenir comme facteur qui déprécie la participation
+électorale dans la province, ce qui ne serait pas le cas dans les autres
+provinces.</p>
 <p>La question de recherche que nous nous posons alors est la suivante:
 <em>quelle est l’influence de la taille de la circonscription sur la
 participation aux élections fédérales de 2021 dans les communautés
@@ -622,21 +622,15 @@ les caractéristiques socioéconomiques sont différentes.</p>
 </div>
 <div id="bibliographie" class="section level1">
 <h1>Bibliographie</h1>
-<p>article{harell2010explaining, title={Explaining Aboriginal turnout in
-federal elections: Evidence from Alberta, Saskatchewan, and Manitoba},
-author={Harell, Allison and Panagos, Dimitrios and Matthews, J Scott},
-year={2010} }</p>
-<p><span class="citation">@article</span>{hill2010voting, title={Voting
-attitudes and behaviour among Aboriginal peoples: Reports from Anangu
-women}, author={Hill, Lisa and Alport, Kate}, journal={Australian
-Journal of Politics &amp; History}, volume={56}, number={2},
-pages={242–258}, year={2010}, publisher={Wiley Online Library} }</p>
-<p><span class="citation">@article</span>{armstrong2023exploring,
-title={Exploring the effects of electorate size on indigenous voter
-turnout}, author={Armstrong, David A and Alcantara, Christopher and
-Kennedy, John}, journal={Politics, Groups, and Identities}, volume={11},
-number={1}, pages={98–107}, year={2023}, publisher={Taylor &amp;
-Francis} }</p>
+<p>Armstrong, D. A., Alcantara, C., &amp; Kennedy, J. (2023a). Exploring
+the effects of electorate size on indigenous voter turnout. Politics,
+Groups, and Identities, 11(1), 98‑107. <a href="https://doi.org/10.1080/21565503.2021.1926297" class="uri">https://doi.org/10.1080/21565503.2021.1926297</a></p>
+<p>Harellll, A., Panagos, D., &amp; Matthews, J. (2010). Explaining
+Aboriginal Turnout in Federal Elections : Evidence from Albe rta,
+Saskatchewan, and Manitoba.</p>
+<p>Hill, L., &amp; Alport, K. (2010). Voting Attitudes and Behaviour
+Among Aboriginal Peoples : Reports from Anangu Women. Australian Journal
+of Politics &amp; History, 56(2), 242‑258. <a href="https://doi.org/10.1111/j.1467-8497.2010.01552.x" class="uri">https://doi.org/10.1111/j.1467-8497.2010.01552.x</a></p>
 </div>
 
 
