essaiyer fitter le projet rmd

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     <div class="features">
       <article>
         <!-- Aperçu du projet en image -->
-        <a href="C:\Users\willi\OneDrive\Documents\WilliamBeaudry.github.io\projet_session\projet_Rmd.rmd" class="image" target="_blank">
-          <img src="projet_session/projet.png" alt="Aperçu du projet de session" />
+        <a href="projet_Rmd.rmd" class="image" target="_blank">
+          <img src="projet_session/projet.png" alt="Aperçu du projet de session"/>
         </a>
         <div class="inner">
           <h4>Taille de la circonscription et participation électorale</h4>
